infrastructure/istio/authorization-policies/monitoring-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: monitoring-policy
  namespace: observability
spec:
  action: ALLOW

  rules:
    - from:
        - source:
            namespaces:
              - observability
              - platform
